--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/splash_tv_version"
-        android:text="版本:1.0"
+        android:text="版本:"
         android:textSize="18sp"
         android:textColor="#FFFFFF"
         android:layout_alignParentBottom="true"
